--- a/templates/create_report.j2
+++ b/templates/create_report.j2
@@ -5,5 +5,7 @@ Hostname, Days Inactive
 {% if ((current_dt | to_datetime ) - ( inventory_item.summary_fields.last_job.finished | regex_replace('(\\d{4}-\\d{2}-\\d{2})T(\\d{2}:\\d{2}:\\d{2}).*', '\\1 \\2') | to_datetime )).days > threshold %}
 {{ inventory_item.name }}, {{  ((current_dt | to_datetime ) - ( inventory_item.summary_fields.last_job.finished | regex_replace('(\\d{4}-\\d{2}-\\d{2})T(\\d{2}:\\d{2}:\\d{2}).*', '\\1 \\2') | to_datetime )).days }}
 {% endif %}
+{% else %}
+{{ inventory_item.name }}, Never Used
 {% endif %}
 {% endfor %}
